[gd_scene load_steps=2 format=3 uid="uid://byp7bqyn8yng2"]

[ext_resource type="Script" path="res://scripts/sign_double.gd" id="1_1d8x1"]

[node name="SignDouble" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_1d8x1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
